alignment fixes

--- a/themes/elevage/static/css/main.css
+++ b/themes/elevage/static/css/main.css
@@ -395,7 +395,7 @@ br {
 .sticky {
     position: fixed;
     top: 0;
-    width: 90%;
+    width: 100%;
     background-color: white;
     z-index: 1;
     /* box-shadow: 2px 2px 2px 2px #EEEEEE; */
@@ -501,8 +501,8 @@ br {
     }
 
     .main-desc {
-        margin-left: 5%;
-        margin-right: 5%;
+        margin-left: 1%;
+        margin-right: 1%;
     }
 
     video {
@@ -567,6 +567,7 @@ br {
     }
 
     .site {
+        padding-left: 0;
         padding-right: 0;
         margin: 0;
     }
